--- a/TaskManager/tasks/templates/tasks/subtask_change.html
+++ b/TaskManager/tasks/templates/tasks/subtask_change.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block content %}
-    <form action="" method="post">
-    {% csrf_token %}
-    {% for field in form %}
-    	{{ field.label }}
-        {{ field }}
-    {% endfor %}
-    <button type="submit" class="save-btn">Сохранить</button>
+    <form action="" method="post" class="subtask-form">
+        {% csrf_token %}
+        {% for field in form %}
+            {{ field.label_tag }}
+            {{ field }}
+        {% endfor %}
+        <button type="submit" class="save-btn">Сохранить</button>
     </form>
 {% endblock %}
