--- a/TaskManager/tasks/templates/tasks/task.html
+++ b/TaskManager/tasks/templates/tasks/task.html
@@ -3,6 +3,7 @@
     {% csrf_token %}
     <div class="task-layout">
         <form method="post">
+            {% csrf_token %}
             <!-- Описание и комментарий -->
             <div class="task-info">
                 {{ form.title }}
@@ -78,4 +79,3 @@
     >
 </div>
 {% endblock %}
-
