--- a/TaskManager/tasks/templates/tasks/tasks_list.html
+++ b/TaskManager/tasks/templates/tasks/tasks_list.html
@@ -13,7 +13,7 @@
 
                 <form method="POST" action="{% url 'app_tasks:subtask_create' task.id %}">
                     {% csrf_token %}
-                    <button type="submit" class="subtask-control-btn">Добавить подзадачи</button>
+                    <button type="submit" class="subtask-control-btn">Добавить подзадачу</button>
                 </form>
 
                 <p class="taskm-meta">Срок сдачи: {{ task.deadline_date }}</p>
