--- a/TaskManager/projects/templates/projects/projects_list.html
+++ b/TaskManager/projects/templates/projects/projects_list.html
@@ -6,29 +6,31 @@
     <h2 class="projects-title">Мои проекты:</h2>
 
     <div class="projects-container" id="projectsContainer">
-        {% for project in projects %}
+        {% for project_data in projects_with_roles %}
         <div class="project-card">
-            <a href="{% url 'app_projects:project_view' project.slug %}">
+            <a href="{% url 'app_projects:project_view' project_data.project.slug %}">
 
-                <p class="project-title"><strong>{{ project.title }}</strong></p>
-                <p class="project-description">{{ project.description }}</p>
-                <p>{{ project.comment }}</p>
+                <p class="project-title"><strong>{{ project_data.project.title }}</strong></p>
+                <p class="project-description">{{ project_data.project.description }}</p>
+                <p>{{ project_data.project.comment }}</p>
                 <ul class="project-tasks">
-                    {% for task in project.tasks.all %}
+                    {% for task in project_data.project.tasks.all %}
                     <li>{{ task.title }}</li>
                     {% endfor %}
                 </ul>
+                
+                {% if project_data.is_admin %}
+                    <a href="{% url 'app_tasks:task_create' %}?project={{ project_data.project.slug }}" class="project-btn">Добавить задачу</a>
+                {% endif %}
 
-{#                <a href="#" class="project-btn">Добавить задачи</a>#}
-                <a href="{% url 'app_tasks:task_create' %}?project={{ project.slug }}" class="project-btn">Добавить задачи</a>
-                <p class="project-meta">Статус проекта: {{ project.get_visibility_display }}</p>
+                <p class="project-meta">Статус проекта: {{ project_data.project.get_visibility_display }}</p>
 
                 <span
-                    class="project-status {% if project.status == 'active' %}in-progress{% else %}completed{% endif %}">
-                    {{ project.get_status_display }}
+                    class="project-status {% if project_data.project.status == 'active' %}in-progress{% else %}completed{% endif %}">
+                    {{ project_data.project.get_status_display }}
                 </span>
 
-                <a href="#" class="st-btn">{{ project.get_is_completed_display }}</a>
+                <a href="#" class="st-btn">{{ project_data.project.get_is_completed_display }}</a>
 
             </a>
         </div>
