--- a/TaskManager/templates/base.html
+++ b/TaskManager/templates/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'projects/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'notification/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'tasks/css/styles.css' %}">
